# cuda-image-resize

./: CMakeLists.txt  README.md  kernel.cu  main.cpp
